--- a/package.json
+++ b/package.json
@@ -12,16 +12,34 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/postcss": "^4.1.12",
+    "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-router": "^1.131.27",
     "@tanstack/react-start": "^1.131.27",
+    "better-auth": "^1.3.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^17.2.1",
+    "drizzle-orm": "^0.44.4",
+    "lucide-react": "^0.541.0",
+    "next-themes": "^0.4.6",
+    "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.12",
     "vite": "^6.3.5"
   },
   "devDependencies": {
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
+    "drizzle-kit": "^0.31.4",
+    "tsx": "^4.20.5",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5.9.2",
     "vite-tsconfig-paths": "^5.1.4"
   }
