--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "wrangler": "^4.32.0"
   },
   "devDependencies": {
     "@types/react": "^19.1.11",
