Swap tanstack start for react router with hono, Add validation and refactors - Remove tanstack start and router - Install and configure react router and hono - Add the movies index endpoint - Install zod, imported and updated the movies schema - Refactor the movies filters in client and server to work with the tmdb api - Changed the style of the filters - Extract reusable components

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,12 +1,8 @@
 # wrangler.toml
 name = "movietracker"
-main = "./.output/server/index.mjs"
-compatibility_date = "2025-04-01"
-compatibility_flags = ["nodejs_compat"]
-
-[assets]
-binding = "ASSETS"
-directory = "./.output/public"
+compatibility_date = "2025-08-26"
+main = "./src/api/index.jsx"
+compatibility_flags = [ "nodejs_compat" ]
 
 [[ d1_databases ]]
 binding = "DB"
