- Add the endpoint and components for movie/:id - Fix the initial state of the dates and the active state of the movie filters - Add a maximum of 500 pages to pagination - Add the keyword and person endpoint - Add the movies/keywords and movies/person endpoints and components - Implement caching with KV - Refactor the movie description to work with custom lengths - Add fallback images to movies and people - Fix the scroll restoration - Install and run prettier

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,10 @@ name = "movietracker"
 compatibility_date = "2025-08-26"
 main = "./src/api/index.jsx"
 compatibility_flags = [ "nodejs_compat" ]
+kv_namespaces = [ {binding = "KV", id = "f0158924cb54404690ef2627acf2baea"} ]
+
+[assets]
+not_found_handling = "single-page-application"
 
 [[ d1_databases ]]
 binding = "DB"
