--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
     "hono": "^4.9.4",
+    "json-stable-stringify": "^1.3.0",
     "lucide-react": "^0.541.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
@@ -50,6 +51,8 @@
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
     "drizzle-kit": "^0.31.4",
+    "prettier": "3.6.2",
+    "tailwind-scrollbar": "^4.0.2",
     "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5.9.2",
