--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@cloudflare/vite-plugin": "^1.11.7",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -31,7 +32,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
     "hono": "^4.9.4",
     "json-stable-stringify": "^1.3.0",
@@ -45,21 +45,24 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
     "vite": "^6.3.5",
-    "wrangler": "^4.32.0",
     "zod": "^4.1.3",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.0",
     "@tanstack/eslint-plugin-query": "^5.83.1",
+    "@types/node": "^24.3.1",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
+    "dotenv": "^17.2.2",
     "drizzle-kit": "^0.31.4",
     "prettier": "3.6.2",
     "tailwind-scrollbar": "^4.0.2",
     "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5.9.2",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "wrangler": "^4.35.0"
   }
 }
