Add the text search feature, reviews, install vitests and add api tests - Add the reviews schema, endpoints and components - Add likes to reviews - Add movies, tv shows, people, networks and genres to the schema - Add the text search feature to find movies, tv shows and people - Refactor the active tab component on movies and tv shows - Update styles - Install and  configure vitest - Add API tests for searches and reviews

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev",
-    "build": "vite build"
+    "build": "vite build",
+    "test": "vitest test"
   },
   "keywords": [],
   "author": "",
@@ -45,6 +46,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
     "vite": "^6.3.5",
+    "vitest": "^3.2.4",
     "zod": "^4.1.3",
     "zustand": "^5.0.8"
   },
