--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
+    "better-sqlite3": "^12.4.1",
     "dotenv": "^17.2.2",
     "drizzle-kit": "^0.31.4",
     "prettier": "3.6.2",
