- Refactor the API endpoints and components to use the new mediaId type - Refactor the reviews, diary and lists endpoints to fetch the media data server side - Fix the auth import in the reviews endpoint - Refactor large queries to batch them - Add a helper function to chunk those batch queries - Refactored and moved the lists endpoint to its own folder - Add an endpoint that returns the ids of the media in a list to prevent adding duplicated media - Refactor queries to get totals and averages using window functions - Add tests for sorting and filtering reviews, profile data and the list and users index - Set the page to 1 when submitting the list and users index filters

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "test": "vitest test"
+    "test": "vitest test",
+    "playwright": "playwright test --ui"
   },
   "keywords": [],
   "author": "",
